Fixed Styling for Scrollbar

--- a/src/Style/Content.module.scss
+++ b/src/Style/Content.module.scss
@@ -21,8 +21,6 @@
 
 .contentbox {
     display: flex;
-    justify-content: center;
-    width: 940px;
     height: 600px;
     img {
         width: 475px;
@@ -31,8 +29,8 @@
 }
 
 .colum {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 21px;
+    padding-right: 21px;
 }
 
 .centercoulum {
